// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NavigationButton snapshot testing the down Navigationbutton 1`] = `
<View>
  <View
    accessible={true}
    isTVSelectable={true}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignItems": "center",
        "height": 70,
        "justifyContent": "center",
        "opacity": 1,
        "width": 70,
      }
    }
  >
    <Image
      source={
        Object {
          "testUri": "../../../js/drawables/arrow_button.png",
        }
      }
      style={
        Object {
          "height": 70,
          "resizeMode": "stretch",
          "transform": Array [
            Object {
              "rotate": "90deg",
            },
          ],
          "width": 30,
        }
      }
    />
  </View>
</View>
`;

exports[`NavigationButton snapshot testing the up Navigationbutton 1`] = `
<View>
  <View
    accessible={true}
    isTVSelectable={true}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignItems": "center",
        "height": 70,
        "justifyContent": "center",
        "opacity": 1,
        "width": 70,
      }
    }
  >
    <Image
      source={
        Object {
          "testUri": "../../../js/drawables/arrow_button.png",
        }
      }
      style={
        Object {
          "height": 70,
          "resizeMode": "stretch",
          "transform": Array [
            Object {
              "rotate": "270deg",
            },
          ],
          "width": 30,
        }
      }
    />
  </View>
</View>
`;
